vlib/v/parser/tests/fixed_array_size_using_non_constant_err.vv
module main

fn main() {
	mut t := [0, 0]

	println(t.len)
	println(typeof(t.len).name)

	mut score := [t.len][t.len]int{}
}
